# jiraworklog

./: .gitignore  CHANGELOG.md  README.md  check_worklog_changes.py  compare_remote_changes.py  fetch_worklogs.py  jira_worklog.py  merge_worklogs.py  pyproject.toml  run_application.py  scratch.py  sync_worklogs.py
src/: jiraworklog.py
src/jiraworklog/: application.py  auth_jira.py  cmdline_args.py  configuration.py  confirm_updates.py  delete_worklog.py  diff_worklogs.py  fetch_worklogs.py  init_config.py  push_worklogs.py  read_checkedin_worklogs.py  read_jira_worklogs.py  read_local_common.py  read_local_delimited.py  read_local_excel.py  read_local_worklogs.py  read_remote_worklogs.py  readconf.py  reconcile_diffs.py  reconcile_external.py  sync_worklogs.py  update_instructions.py  utils.py  worklogs.py
tests/: _test_diff_worklogs.py  _test_process_worklogs.py  create_apptest.py  data_diffs.py  data_worklogs.py  jiramock.py  run_application.py  test_application.py  test_diff_worklogs.py  test_process_worklogs.py  test_read_local_common.py  test_reconcile_diffs.py  utils.py
tests/data/01-empty-to-empty/: config.yaml  gld-checkedin.json
tests/data/02-add-to-empty/: config.yaml  gld-checkedin.json  worklogs.csv
tests/data/03-remove-to-empty/: config.yaml  gld-remotecmds.json  worklogs.csv
tests/data/12-delim-start-duration/: config.yaml  worklogs.csv
tests/data/13-delim-end-duration/: config.yaml  gld-remotecmds.json  worklogs.csv
tests/data/14-delim-start-end-duration/: checkedin.json  config.yaml  worklogs.csv
(+14 files in other folders)
