[tool.poetry]
name = "jira-worklog"
version = "0.1.0"
description = ""
authors = ["David Pritchard <david.al.pritchard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
pytz = "^2022.1"
jira = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
