[tool.poetry]
name = "jiraworklog"
version = "0.1.0"
description = ""
authors = ["David Pritchard <david.al.pritchard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
pytz = "^2022.1"
jira = "^3.3.0"
Cerberus = "^1.3.4"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
deepdiff = "^5.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
